[package]
name = "cn-data-generator"
version = "0.1.0"
edition = "2021"
authors = ["Justin Perez <justinmp@vt.edu>"]
description = "A data generator for CompressNet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
clap = { version = "4", features = ["derive"] }
csv = "1.1"
rayon = "1.5"
color-eyre = "0.5"
rand = "0.8.5"
indicatif = { version = "0.17.1", features = ["rayon"] }
serde = { version = "1.0.145", features = ["derive"] }
